Fix implemented for codbars starting with 41 but with >=7 digits

--- a/CODBAR_HUG.ipynb
+++ b/CODBAR_HUG.ipynb
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "VCN78_m7utPU",
+        "id": "IDLLI7u3fs9v",
         "colab_type": "text"
       },
       "source": [
@@ -49,7 +49,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1CddRHtFutPU",
+        "id": "VH49j7Gdfs9w",
         "colab_type": "code",
         "colab": {}
       },
@@ -69,7 +69,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yDGyjtkhutPY",
+        "id": "jBue2PMifs9z",
         "colab_type": "text"
       },
       "source": [
@@ -79,10 +79,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yTx2-TXXutPY",
+        "id": "Kl2zOWTPfs90",
         "colab_type": "code",
         "colab": {},
-        "outputId": "113bf77e-755e-4ed6-e6d3-5564648e6017"
+        "outputId": "9a544f6e-b992-404a-a38d-b208368a21a2"
       },
       "source": [
         "url=\"/Users/euclide/Desktop/Codbar_update.xls\"\n",
@@ -167,7 +167,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Z7mhRCkrutPb",
+        "id": "EmMJodrwfs93",
         "colab_type": "text"
       },
       "source": [
@@ -177,7 +177,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WQoQZtQHutPc",
+        "id": "ZN6_LbL6fs93",
         "colab_type": "text"
       },
       "source": [
@@ -187,16 +187,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ov0_aU3IutPc",
+        "id": "lPuO_2Jffs94",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "def create_households(x) :\n",
-        "    listold=['11','21','31','41']\n",
+        "    listold=['11','21','31']\n",
+        "    listold2=['410','411']\n",
         "    if len(str(x))==6 :\n",
         "        return str(x)\n",
-        "    elif (any(c in str(x)[:2] for c in listold) and len(str(x))==7) or len(str(x))==8 :\n",
+        "    elif (any(c in str(x)[:2] for c in listold) and len(str(x))==7) :\n",
+        "        return str(x)[:-1]\n",
+        "    elif len(str(x))==8 :\n",
+        "        return str(x)[:-1]\n",
+        "    elif (any(c in str(x)[:3] for c in listold2) and len(str(x))==7) :\n",
         "        return str(x)[:-1]\n",
         "    else :\n",
         "        return str(x)"
@@ -207,7 +212,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OLLibCTwutPf",
+        "id": "sPOGFEUkfs97",
         "colab_type": "text"
       },
       "source": [
@@ -217,10 +222,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8mhCpSp9utPf",
+        "id": "5EC1MqMofs99",
         "colab_type": "code",
         "colab": {},
-        "outputId": "033cf99a-c1de-4a8c-d685-70522659ef37"
+        "outputId": "b6554c38-3ec6-485d-e1cf-aa00c587b2aa"
       },
       "source": [
         "df['Households_codbar']=df['Codbar'].apply(lambda x: create_households(x))\n",
@@ -310,7 +315,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "J4qrnhFoutPi",
+        "id": "LkPbmKsyfs9_",
         "colab_type": "text"
       },
       "source": [
@@ -320,7 +325,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uL-euobRutPi",
+        "id": "sz3X5_jYfs-A",
         "colab_type": "code",
         "colab": {}
       },
@@ -333,7 +338,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "VOYtydNXutPl",
+        "id": "hCUUXN6Pfs-C",
         "colab_type": "text"
       },
       "source": [
@@ -343,10 +348,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PB6OMg7mutPl",
+        "id": "Au7YVBOgfs-D",
         "colab_type": "code",
         "colab": {},
-        "outputId": "cd1d0c51-2149-41da-e171-43ab34c36b5f"
+        "outputId": "f14279e6-fbaa-4f61-92f0-dc1e8363c7bd"
       },
       "source": [
         "#df[df['Codbar'].apply(lambda x: len(str(x))>=7)]\n",
@@ -457,7 +462,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QHQOg8UPutPp",
+        "id": "nuboE447fs-G",
         "colab_type": "text"
       },
       "source": [
@@ -467,7 +472,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0yiV5Pl-utPp",
+        "id": "rrC2d8OVfs-H",
         "colab_type": "code",
         "colab": {}
       },
@@ -480,7 +485,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0_sX8MM-utPs",
+        "id": "T4PODtURfs-J",
         "colab_type": "text"
       },
       "source": [
@@ -490,10 +495,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Sc0C1g63utPs",
+        "id": "TsXd9PVgfs-K",
         "colab_type": "code",
         "colab": {},
-        "outputId": "084f6e00-390b-4419-a10a-851ef95d81e4"
+        "outputId": "157d7627-0ffe-4f69-e3ea-898153c7001e"
       },
       "source": [
         "df[df['Family_size']>3]"
@@ -1038,7 +1043,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XPAJF8wIutPv",
+        "id": "Dk3-s8CEfs-M",
         "colab_type": "code",
         "colab": {}
       },
@@ -1051,7 +1056,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KW2bmkWIutPy",
+        "id": "l5BjG7mofs-P",
         "colab_type": "code",
         "colab": {}
       },
