Minor cleanings implemented

--- a/CODBAR_HUG.ipynb
+++ b/CODBAR_HUG.ipynb
@@ -216,7 +216,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Apply the function to produce the "
+        "Apply the function to produce the 'Households_codbar' column"
       ]
     },
     {
@@ -500,33 +500,7 @@
         "colab": {}
       },
       "source": [
-        "df[df['Family_size']>3]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Dk3-s8CEfs-M",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "l5BjG7mofs-P",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
+        "df[df['Family_size']>5]"
       ],
       "execution_count": 0,
       "outputs": []
