Very minor change in description of the last cell

--- a/CODBAR_HUG.ipynb
+++ b/CODBAR_HUG.ipynb
@@ -81,8 +81,8 @@
       "metadata": {
         "id": "Kl2zOWTPfs90",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "9a544f6e-b992-404a-a38d-b208368a21a2"
+        "outputId": "9a544f6e-b992-404a-a38d-b208368a21a2",
+        "colab": {}
       },
       "source": [
         "url=\"/Users/euclide/Desktop/Codbar_update.xls\"\n",
@@ -224,8 +224,8 @@
       "metadata": {
         "id": "5EC1MqMofs99",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "b6554c38-3ec6-485d-e1cf-aa00c587b2aa"
+        "outputId": "b6554c38-3ec6-485d-e1cf-aa00c587b2aa",
+        "colab": {}
       },
       "source": [
         "df['Households_codbar']=df['Codbar'].apply(lambda x: create_households(x))\n",
@@ -350,8 +350,8 @@
       "metadata": {
         "id": "Au7YVBOgfs-D",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "f14279e6-fbaa-4f61-92f0-dc1e8363c7bd"
+        "outputId": "f14279e6-fbaa-4f61-92f0-dc1e8363c7bd",
+        "colab": {}
       },
       "source": [
         "#df[df['Codbar'].apply(lambda x: len(str(x))>=7)]\n",
@@ -489,7 +489,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Now we need to check if family members are really coming from the same address"
+        "Sanity check:"
       ]
     },
     {
