Fixed potential bug with floating point codebars

--- a/CODBAR_HUG.ipynb
+++ b/CODBAR_HUG.ipynb
@@ -228,7 +228,7 @@
         "colab": {}
       },
       "source": [
-        "df['Households_codbar']=df['Codbar'].apply(lambda x: create_households(x))\n",
+        "df['Households_codbar']=df['Codbar'].apply(lambda x: create_households(int(x)))\n",
         "\n",
         "df.head()"
       ],
