Fixed potential issue from floating point Codbar

--- a/DataCleaning_FillEmptyFieldsWithPatientZeroData.ipynb
+++ b/DataCleaning_FillEmptyFieldsWithPatientZeroData.ipynb
@@ -81,8 +81,8 @@
       "metadata": {
         "id": "3A3QSPQSXR6r",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "0685ae35-b6af-496c-a888-b63005fd70c2"
+        "outputId": "0685ae35-b6af-496c-a888-b63005fd70c2",
+        "colab": {}
       },
       "source": [
         "url=\"/Users/euclide/Desktop/update_data_29_04.xls\"\n",
@@ -392,8 +392,8 @@
       "metadata": {
         "id": "ZtDnI89wXR7C",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "f6f1f5ea-7e3f-45f1-f106-409ab83f5ee3"
+        "outputId": "f6f1f5ea-7e3f-45f1-f106-409ab83f5ee3",
+        "colab": {}
       },
       "source": [
         "df['rue1'].tail()"
@@ -462,7 +462,7 @@
         "colab": {}
       },
       "source": [
-        "df['Household_id']=df['Codbar'].apply(lambda x: create_households(x))\n",
+        "df['Household_id']=df['Codbar'].apply(lambda x: create_households(int(x)))\n",
         "df['nr_personnes']=df['Household_id'].map(df['Household_id'].value_counts())"
       ],
       "execution_count": 0,
@@ -483,8 +483,8 @@
       "metadata": {
         "id": "8Zrz6hiFXR7M",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "5dd1bde4-d458-4f3f-b13f-24baae2b5d64"
+        "outputId": "5dd1bde4-d458-4f3f-b13f-24baae2b5d64",
+        "colab": {}
       },
       "source": [
         "df.head()"
@@ -666,8 +666,8 @@
       "metadata": {
         "id": "hskYdB9IXR7O",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "469f9b5d-a316-4989-b644-a32045fc182b"
+        "outputId": "469f9b5d-a316-4989-b644-a32045fc182b",
+        "colab": {}
       },
       "source": [
         "df.isnull().sum()"
@@ -709,8 +709,8 @@
       "metadata": {
         "id": "PymAR9RBXR7S",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "5805afce-430b-42c1-a1fd-72ca54e98ef7"
+        "outputId": "5805afce-430b-42c1-a1fd-72ca54e98ef7",
+        "colab": {}
       },
       "source": [
         "#this to accunt for missing values that are not NaN\n",
@@ -915,8 +915,8 @@
       "metadata": {
         "id": "3akrZPPIXR7n",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "25f34777-4d15-476c-f4ff-d0514f055e83"
+        "outputId": "25f34777-4d15-476c-f4ff-d0514f055e83",
+        "colab": {}
       },
       "source": [
         "df.isnull().sum()"
