Column name changed to "num_hhl_particpants"

--- a/DataCleaning_CreateHouseholds.ipynb
+++ b/DataCleaning_CreateHouseholds.ipynb
@@ -586,7 +586,7 @@
    },
    "outputs": [],
    "source": [
-    "df['Family_size']=df['Household_codbar'].map(df['Household_codbar'].value_counts())"
+    "df['num_hhl_particpants']=df['Household_codbar'].map(df['Household_codbar'].value_counts())"
    ]
   },
   {
@@ -783,7 +783,7 @@
     }
    ],
    "source": [
-    "df[df['Family_size']>5]"
+    "df[df['num_hhl_particpants']>5]"
    ]
   },
   {
